# intrisic-dimension-statistics

./: LICENSE  README.md  pyproject.toml
src/manifolds/: __init__.py  manifold.py
